feat: build graph rag pipeline
